; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/bta/hf_ag/extr_bta_ag_sco.c_bta_ag_sco_open.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/bta/hf_ag/extr_bta_ag_sco.c_bta_ag_sco_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32* }

@bta_ag_cb = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@BTA_AG_SCO_XFER_E = common dso_local global i32 0, align 4
@BTA_AG_SCO_OPEN_E = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bta_ag_sco_open(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = call i32 @UNUSED(i32* %6)
  %8 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @bta_ag_cb, i32 0, i32 0, i32 0), align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %10, label %16

10:                                               ; preds = %2
  %11 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @bta_ag_cb, i32 0, i32 0, i32 0), align 8
  %12 = load i32*, i32** %3, align 8
  %13 = icmp ne i32* %11, %12
  br i1 %13, label %14, label %16

14:                                               ; preds = %10
  %15 = load i32, i32* @BTA_AG_SCO_XFER_E, align 4
  store i32 %15, i32* %5, align 4
  br label %18

16:                                               ; preds = %10, %2
  %17 = load i32, i32* @BTA_AG_SCO_OPEN_E, align 4
  store i32 %17, i32* %5, align 4
  br label %18

18:                                               ; preds = %16, %14
  %19 = load i32*, i32** %3, align 8
  %20 = load i32, i32* %5, align 4
  %21 = call i32 @bta_ag_sco_event(i32* %19, i32 %20)
  ret void
}

declare dso_local i32 @UNUSED(i32*) #1

declare dso_local i32 @bta_ag_sco_event(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
